tests/NormalTests/paczka1/small_fuzzy/36054450.err
Error in line 1: S502 S502 14,2
Error in line 3: S502 A326 1,9
Error in line 2: jbEwy1C S502 5,0
Error in line 15: p3Gzzj3xAB S502 71,2
